tests/parser/invalidinput/empty-type-constant.idp
vocabulary V{
	
    type U
    a : U
}

theory T:V{
}

structure S:V{
	U = {}
    
}

procedure main(){
	printmodels(allmodels(T,S))
}

